--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,13 @@
 *, *::before, *::after {
     box-sizing: border-box;
     font-family: monospace;
+    font-size: larger;
   }
   .border-box {
       float: left;
       
   }
+  
   
   :root {
     --hue-neutral: 200;
@@ -86,4 +88,19 @@
   
   .hide {
     display: none;
+  }
+  /*forms*/
+  form {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+  }
+  input {
+      margin-bottom: 1rem;
+      width: 20rem;
+      padding: 1.5rem;
+      font-size: 1.8rem;
+      border: none;
+      box-shadow: 0 0.1rem 1.4rem 0 black;
   }
